--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
+    "koreanize-matplotlib>=0.1.1",
     "matplotlib>=3.10.3",
+    "pandas>=2.3.1",
     "seaborn>=0.13.2",
 ]
